--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "restructuredtext.confPath": "${workspaceFolder}\\source"
+    "restructuredtext.confPath": "${workspaceFolder}/source",
+    "restructuredtext.builtDocumentationPath": "${workspaceFolder}/build/html",
+    "restructuredtext.updateOnTextChanged": "true",
+    "restructuredtext.updateDelay": 1000,
+    "cmake.configureOnOpen": true
 }
