--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,11 @@
 {
-    "restructuredtext.confPath": "${workspaceFolder}/source",
     "restructuredtext.builtDocumentationPath": "${workspaceFolder}/build/html",
     "restructuredtext.updateOnTextChanged": "true",
-    "restructuredtext.updateDelay": 500,
+    "restructuredtext.updateDelay": 10000,
     "cmake.configureOnOpen": true,
     "editor.rulers": [80,120],
     "workbench.colorCustomizations": {
         "editorRuler.foreground": "#3d3a38"
-    }
+    },
+    "restructuredtext.confPath": "${workspaceFolder}\\source"
 }
